crates/rs_html_parser/tests/snapshots/html5lib_test1_test__tests__single_start_tag.snap
---
source: crates/rs_html_parser/tests/html5lib_test1_test.rs
expression: "parser_test(r#\"<h>\"#)"
---
[
    Token {
        data: "h",
        attrs: None,
        kind: OpenTag,
        is_implied: false,
    },
    Token {
        data: "h",
        attrs: None,
        kind: CloseTag,
        is_implied: true,
    },
]
