crates/rs_html_parser/tests/snapshots/html5lib_test1_test__tests__start_tag_w_attribute_no_quotes.snap
---
source: crates/rs_html_parser/tests/html5lib_test1_test.rs
expression: "parser_test(r####\"<h a=b>\"####)"
---
[
    Token {
        data: "h",
        attrs: Some(
            {
                "a": Some(
                    (
                        "b",
                        Unquoted,
                    ),
                ),
            },
        ),
        kind: OpenTag,
        is_implied: false,
    },
    Token {
        data: "h",
        attrs: None,
        kind: CloseTag,
        is_implied: true,
    },
]
