crates/rs_html_parser/tests/snapshots/html5lib_test1_test__tests__truncated_doctype_start.snap
---
source: crates/rs_html_parser/tests/html5lib_test1_test.rs
expression: "parser_test(r#\"<!DOC>\"#)"
---
[
    Token {
        data: "",
        attrs: Some(
            {
                "!DOC": None,
            },
        ),
        kind: ProcessingInstruction,
        is_implied: false,
    },
]
