crates/rs_html_parser/tests/snapshots/html5lib_test1_test__tests__unfinished_entity.snap
---
source: crates/rs_html_parser/tests/html5lib_test1_test.rs
expression: "parser_test(r#\"&f\"#)"
---
[
    Token {
        data: "&f",
        attrs: None,
        kind: Text,
        is_implied: false,
    },
]
