crates/rs_html_parser/tests/snapshots/html5lib_test1_test__tests__unfinished_numeric_entity.snap
---
source: crates/rs_html_parser/tests/html5lib_test1_test.rs
expression: "parser_test(\"&#x\")"
---
[
    Token {
        data: "&#x",
        attrs: None,
        kind: Text,
        is_implied: false,
    },
]
