crates/rs_html_parser/tests/snapshots/html5lib_test1_test__tests__unquoted_attribute_at_end_of_tag_with_final_character_of_amp_comma_with_tag_followed_by_characters.snap
---
source: crates/rs_html_parser/tests/html5lib_test1_test.rs
expression: "parser_test(r####\"<a a=a&>foo\"####)"
---
[
    Token {
        data: "a",
        attrs: Some(
            UniCaseBTreeMap {
                inner: {
                    "a": Some(
                        (
                            "a&",
                            Unquoted,
                        ),
                    ),
                },
            },
        ),
        kind: OpenTag,
        is_implied: false,
    },
    Token {
        data: "foo",
        attrs: None,
        kind: Text,
        is_implied: false,
    },
    Token {
        data: "a",
        attrs: None,
        kind: CloseTag,
        is_implied: true,
    },
]
